# grasp-copilot

./: .gitignore  README.md  README_DATA_TRAINING.md  environment.yml  episode.py  generate_dataset.py  grasp_copilot.jsonl  grasp_copilot.jsonl.stats.json  grid.py  install_conda.sh  oracle.py  pyproject.toml  yaw.py
data/: dataset_0.jsonl  dataset_0.jsonl.stats.json  dataset_3.jsonl.stats.json
data_generator/: README.md  __init__.py  collect_and_prepare.py  episode.py  episode_pouring.py  episode_stacking.py  generate_dataset.py  grid.py  inspect_data.py  oracle.py  oracle_pouring.py  oracle_registry.py  oracle_stacking.py  yaw.py
evaluation/: .~lock.PRIME_Evaluation_Plan.docx#  README.md  convert_ambiguous_to_contract.py  finish_paper_run.sh  offline_exec_benchmark.py  robustness_benchmark.py  run_full_benchmark.py  run_paper_benchmark.py  run_robustness_sweep.py  status.py
grasp_copilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
llm/: data.py  eval.py  inference.py  prepare_llm_data.py  prepare_woz_phase2_data.py  rebalance_contract.py  train.py
plans/: noise-from-real-data.md  package4_ig_reranker.md  training_woz_envs.md
scripts/: README.md  build_consistent_small_datasets.py  debug_cli_install.py  gui_assist_demo.py  hf_model_store.py  prepare_llm_data.py  print_qwen7b_zs_table_row.py  run_strong_llm_bench.sh  split_consistent_small_by_env.py
tests/: test_grid.py  test_jsonl_schema.py  test_oracle_ambiguity.py  test_oracle_struggle.py  test_yaw.py
unity_config/: TRANSFER_TO_UNITY_noise_sweep.md  check_reranker.sh  (+34 more)
(+396 files in other folders)
